# audio2mic

./: .gitignore  README.md  generate_test_audio.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/audio2mic/: __init__.py  main.py
